--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
       <artifactId>spring-beans</artifactId>
       <version>5.3.16</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.struts</groupId>
+      <artifactId>struts2-core</artifactId>
+      <version>2.0.5</version>
+    </dependency>
   </dependencies>
 
 </project>
