--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
-      <version>5.3.16</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.struts</groupId>
-      <artifactId>struts2-core</artifactId>
-      <version>2.0.5</version>
+      <version>5.2.22.RELEASE</version>
     </dependency>
   </dependencies>
 
