--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
-      <version>5.2.22.RELEASE</version>
+      <version>5.3.16</version>
     </dependency>
   </dependencies>
 
