--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,12 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
-      <version>5.3.16</version>
+      <version>5.2.22.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId>
+      <version>3.2.2</version>
     </dependency>
   </dependencies>
 
